--- a/views/list.ejs
+++ b/views/list.ejs
@@ -33,12 +33,29 @@
 
     <h4>List</h4>
     <% for(let i = 0; i < posts.length; i++) { %>
+        <!-- <p>number : <%= posts[i]._id %></p> -->
         <h4>title : <%= posts[i].title  %></h4>
         <p>date : <%= posts[i].date  %></p>
+        <button class="delete" data-id ="<%= posts[i]._id %>">delete</button>
     <% } %>
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+
+    <script>
+
+        $('.delete').click((e)=> {
+            var postNumber = e.target.dataset.id;
+            $.ajax({
+                method : 'DELETE',
+                url : '/delete',
+                data : { _id : postNumber }
+            }).done((res)=>{
+
+            });
+        });
+
+    </script>
 </body>
 </html>
